# crypto-composite-market-data

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  PROJECT_STATE.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.11.0.md  RELEASE_NOTES_v0.12.0.md  RELEASE_NOTES_v0.13.0.md  RELEASE_NOTES_v0.13.1.md  RELEASE_NOTES_v0.14.1.md  RELEASE_NOTES_v0.15.0.md  RELEASE_NOTES_v0.16.1.md  RELEASE_NOTES_v0.16.2.md  RELEASE_NOTES_v0.17.0.md  RELEASE_NOTES_v0.18.0.md  RELEASE_NOTES_v0.18.1.md  RELEASE_NOTES_v0.18.2.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.3.md  RELEASE_NOTES_v0.3.4.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.1.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.9.0.md  SECURITY.md  apply_v0.10.0_csv_export.ps1  apply_v0.11.0_coinbase_spot_connector.ps1  apply_v0.11.1_coinbase_metadata_cleanup.ps1  apply_v0.11.1_symbol_map_test_hotfix.ps1  apply_v0.12.0_kraken_spot_connector.ps1  (+7 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_source_request.yml  downstream_use_case.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-pages.yml  publish-pypi.yml  publish-testpypi.yml
artifacts-spot/: composite_ohlcv.json  composite_ohlcv_15m.json  composite_orderbook_ladder.json  composite_orderbook_ladder_15m.json  data_quality.json  raw_scan_15m.json  run_summary.json
docs/: ADOPTION_PLAYBOOK.md  ARTIFACT_QUALITY_SCORE.md  ARTIFACT_SCHEMA.md  ARTIFACT_VALIDATION.md  CLAUDE_FOR_OSS_READINESS.md  COINBASE_CONNECTOR.md  COMMUNITY_GROWTH.md  CSV_EXPORT.md  DASHBOARD_API.md  DASHBOARD_PLAN.md  DATA_QUALITY.md  DATA_QUALITY_CONSTANTS.md  DUCKDB_EXAMPLES.md  GATE_CONNECTOR.md  GITHUB_PAGES_DEMO.md  GOOD_FIRST_ISSUES.md  ISSUE_BACKLOG_SEEDS.md  KRAKEN_CONNECTOR.md  LFX_ALIGNMENT.md  LIMITATIONS.md  MULTI_SYMBOL_UNIVERSE.md  OUTPUT_ARTIFACTS.md  PACKAGING.md  PUBLISH_GITHUB_UI.md  QUICKSTART_5_MIN.md  RATE_LIMIT_AND_CACHE.md  RELEASE_CHECKLIST.md  RESEARCH_REPORT.md  ROADMAP.md  SAMPLE_REPORT.md  SCHEMA_STABILITY.md  STATIC_REPORT.md  STATUS_THRESHOLDS.md  STREAM_DEPTH.md  TUTORIAL_CONSUME_ARTIFACTS.md  USEFUL_OUTPUTS.md  WHY_COMPOSITE_MARKET_DATA.md
examples/: basic_run.sh  dashboard_local.sh  inspect_quality.py  universe_config.example.json
examples/sample_artifacts/: README.md  dashboard_profile.json  data_quality.json  universe_summary.json
examples/sample_artifacts/BTC-USDT/: composite_ohlcv.json  composite_ohlcv_15m.json  composite_ohlcv_1h.json  composite_ohlcv_5m.json  composite_orderbook_ladder.json  composite_orderbook_ladder_15m.json  composite_orderbook_ladder_1h.json  composite_orderbook_ladder_5m.json  data_quality.json  run_summary.json
examples/sample_artifacts/ETH-USDT/: composite_ohlcv.json  composite_ohlcv_15m.json  composite_ohlcv_1h.json  composite_ohlcv_5m.json  composite_orderbook_ladder.json  composite_orderbook_ladder_15m.json  composite_orderbook_ladder_1h.json  composite_orderbook_ladder_5m.json  data_quality.json  run_summary.json
sample-report/: artifact_report.html  dashboard.html  research_report.html  research_summary.json
scripts/: live_smoke.py
src/crypto_composite/: __init__.py  artifact_csv.py  artifact_parquet.py  artifact_quality.py  artifact_report.py  artifact_validator.py  cli.py  dashboard.py  dashboard_analytics.py  dashboard_frontend.py  dashboard_profile.py  dashboard_refresh.py  lfx_alignment.py  pipeline.py  research_report.py  sample_workflow.py  schema_validation.py  schemas.py  stream_depth.py  symbol_map.py  universe.py  utils.py
src/crypto_composite/artifact_schemas/: composite_ohlcv.schema.json  composite_orderbook_ladder.schema.json  data_quality.schema.json  run_summary.schema.json  universe_summary.schema.json
src/crypto_composite/connectors/: base.py  binance.py  bybit.py  coinbase.py  gate.py  kraken.py  okx.py
src/crypto_composite/engines/: composite_ohlcv.py  composite_orderbook_ladder.py  scan.py
src/crypto_composite/templates/: dashboard.html
tests/: test_artifact_csv.py  test_artifact_json_schema.py  test_artifact_parquet.py  test_artifact_quality.py  test_artifact_report.py  test_artifact_validator.py  test_audit_regressions.py  test_bucket_size_scaling.py  test_cli_import.py  test_cli_run.py  test_composite_ohlcv.py  test_composite_ohlcv_edge_cases.py  test_composite_orderbook_ladder.py  test_connector_contracts.py  test_connector_fidelity.py  test_connector_record_isolation.py  test_connector_timeframes.py  test_dashboard.py  test_dashboard_frontend_template.py  test_dashboard_price_zones.py  test_dashboard_refresh.py  test_gate_connector.py  test_lfx_alignment.py  test_live_smoke_evidence.py  test_okx_derivative_units.py  test_orderbook_ladder_edge_cases.py  test_pipeline_artifacts.py  test_rate_limit_cache.py  test_research_report.py  test_sample_artifacts.py  test_sample_workflow.py  test_scan_verdict_integrity.py  test_stream_depth.py  test_symbol_map.py  test_symbol_map_edge_cases.py  test_universe.py
