[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-composite-market-data"
version = "0.18.2"
description = "Public multi-exchange crypto market-data composite toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "thanhlq8-max" }
]
keywords = [
  "crypto",
  "market-data",
  "ohlcv",
  "orderbook",
  "binance",
  "okx",
  "bybit",
  "data-engineering"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "requests>=2.31"
]

[project.urls]
Homepage = "https://github.com/thanhlq8-max/crypto-composite-market-data"
Repository = "https://github.com/thanhlq8-max/crypto-composite-market-data"
Issues = "https://github.com/thanhlq8-max/crypto-composite-market-data/issues"

[project.scripts]
crypto-composite = "crypto_composite.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# E701/E702 (one-line compound statements) match the existing compact connector
# style; relaxing them keeps lint adoption a zero-behavior-change step.
# Removing this exception is tracked as follow-up work in PROJECT_STATE.md.
ignore = ["E701", "E702"]

[tool.pytest.ini_options]
testpaths = ["tests"]
