[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-composite-market-data"
version = "1.0.0"
description = "Public multi-exchange crypto market-data composite toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "thanhlq8-max" }
]
keywords = [
  "crypto",
  "market-data",
  "ohlcv",
  "orderbook",
  "binance",
  "okx",
  "bybit",
  "data-engineering"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "requests>=2.31"
]

[project.optional-dependencies]
parquet = [
  "pyarrow>=15"
]
stream = [
  "websockets>=12"
]
schema = [
  "jsonschema>=4.18"
]

[project.urls]
Homepage = "https://github.com/thanhlq8-max/crypto-composite-market-data"
Repository = "https://github.com/thanhlq8-max/crypto-composite-market-data"
Issues = "https://github.com/thanhlq8-max/crypto-composite-market-data/issues"

[project.scripts]
crypto-composite = "crypto_composite.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"crypto_composite.templates" = ["*.html"]
"crypto_composite.artifact_schemas" = ["*.schema.json"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Pin the rule set explicitly so a ruff upgrade cannot silently enable new
# default rules and break CI. This is ruff's historical default selection
# (pyflakes + the pycodestyle error subset); broadening it is a deliberate,
# separate change.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
files = ["src/crypto_composite"]
# Baseline type checking: default (non-strict) mypy over the package source. It
# already catches real defects (heterogeneous-dict misuse, Optional min/max).
# Tightening toward strict is a later, separate step.

[[tool.mypy.overrides]]
# pyarrow ships no type stubs or py.typed marker; it is an optional [parquet] extra.
# jsonschema is imported lazily and is an optional [schema] extra.
module = ["pyarrow.*", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
